--- a/app/styles/components/map/modal.scss
+++ b/app/styles/components/map/modal.scss
@@ -12,7 +12,7 @@
   flex-basis: 100%;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .section {
@@ -108,7 +108,7 @@
 .footerContainer {
   display: flex;
   justify-content: center;
-  margin: 10px 0 0;
+  margin: 10px 0 20px;
 
   > button {
     margin-right: 5px;
