--- a/app/styles/components/map/report-panel.scss
+++ b/app/styles/components/map/report-panel.scss
@@ -212,6 +212,11 @@
 
 .subscriptionModal {
   text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   .subscriptionTitle {
     margin-bottom: 25px;
   }
