--- a/app/styles/components/shared/select-container.scss
+++ b/app/styles/components/shared/select-container.scss
@@ -6,8 +6,10 @@
   :global .Select {
     flex: 1 1 auto;
   }
+
   &.fixedWidth {
     width: 256px;
     margin: 0 auto;
+    margin-bottom: 20px;
   }
 }
