--- a/app/styles/components/shared/react-select.scss
+++ b/app/styles/components/shared/react-select.scss
@@ -4,6 +4,19 @@
   font-size: $font-size-small;
   text-transform: uppercase;
 
+  .Select-value{
+    border: 1px solid darkgray !important;
+  }
+
+  .Select-value-icon {
+    display: none !important;
+  }
+
+  .Select-value-label {
+    background-color: white;
+    color: #111;
+  }
+
   :global .Select-control {
     background-color: transparent;
     border: solid 1px $color-button-primary;
@@ -77,7 +90,6 @@
     background-color: rgba($color-button-primary, .2);
     border: 0;
     border-radius: 2px;
-    color: $color-white;;
   }
 
   :global .Select--multi .Select-value-icon {
