Fix select color and polygon title

--- a/app/styles/components/map/report-panel.scss
+++ b/app/styles/components/map/report-panel.scss
@@ -227,7 +227,9 @@
 
   .modalPolygonName {
    	font-size: $font-size-x-small;
-	  color: $color-31;
+    color: $color-31;
+    text-align: center;
+    margin: 0 auto;
   }
 
   .selector {
