--- a/app/styles/components/shared/selector.scss
+++ b/app/styles/components/shared/selector.scss
@@ -31,7 +31,7 @@
 
   > select {
     appearance: none;
-    background-color: $color-38;
+    background-color: transparent;
     border: 0;
     color: $color-4;
     font-size: $font-size-small;
