--- a/app/styles/components/shared/modal.scss
+++ b/app/styles/components/shared/modal.scss
@@ -105,6 +105,36 @@
     }
   }
 
+  .scrollbar {
+    margin-left: 22px;
+    float: left;
+    height: 300px;
+    width: 65px;
+    background: $color-4;
+    overflow-y: scroll;
+    margin-bottom: 25px;
+
+    &::-webkit-scrollbar{
+      width: 12px;
+      background-color: $color-4;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+      box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+      background-color: #555;
+    }
+
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      border-radius: 10px;
+      background-color: $color-4;
+    }
+  }
+
+
   .closeButton {
     background-color: $color-4;
     border: 0;
