--- a/app/styles/components/shared/react-select.scss
+++ b/app/styles/components/shared/react-select.scss
@@ -90,6 +90,7 @@
     background-color: rgba($color-button-primary, .2);
     border: 0;
     border-radius: 2px;
+    color: $color-white;
   }
 
   :global .Select--multi .Select-value-icon {
