Fix PromptLayerRemoval modal

--- a/app/styles/components/shared/modal.scss
+++ b/app/styles/components/shared/modal.scss
@@ -89,7 +89,7 @@
           color: $color-4;
         }
 
-        .footer {
+        .buttonFooter {
           display: flex;
           justify-content: center;
         }
