Fix filter select css on prod env; restore filter warning message back button functionality; prevent error when layers have no filter header

--- a/app/styles/components/shared/modal.scss
+++ b/app/styles/components/shared/modal.scss
@@ -208,3 +208,14 @@
   bottom: 30px;
   text-align: center;
 }
+
+.footerContainer {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 20px;
+
+  > button {
+    margin-right: 5px;
+    width: 180px;
+  }
+}
