Uncheck layers on filters by default; minor css fix on no filters message

--- a/app/styles/components/map/modal.scss
+++ b/app/styles/components/map/modal.scss
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+.message {
+  color: rgba($color-34, 0.3);
+}
+
 .optionsContainer {
   display: flex;
   flex-basis: 100%;
