have the encounters tabbed panel support displaying more than 2 vessels/reefers

--- a/app/styles/components/info-panel.scss
+++ b/app/styles/components/info-panel.scss
@@ -72,12 +72,9 @@
       }
 
       .header {
-        padding-top: 5px;
-        padding-bottom: 5px;
+        padding: 10px 25px;
         font-size: $font-size-xs-small;
         display: flex;
-        justify-content: space-around;
-        align-items: center;
         border-bottom: 1px solid $color-fade-blue;
 
         .title {
