encounters -> vesselInfo panel link

--- a/app/styles/components/info-panel.scss
+++ b/app/styles/components/info-panel.scss
@@ -63,6 +63,7 @@
           text-transform: uppercase;
           text-decoration: underline;
           font-weight: bold;
+          cursor: pointer;
 
           .arrowSvg {
             margin-left: 5px;
