fixed scroll + collapsed encounters on mobile

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -23,6 +23,7 @@ $mobile-height: 60px;
 $control-panel-height: 70vh;
 $control-panel-mobile-height: 40vh;
 $vessel-info-height: 70px;
+$vessel-info-height-encounters: 36px;
 
 $submenu-header-height: 76px;
 
