--- a/app/styles/components/shared/color-picker.scss
+++ b/app/styles/components/shared/color-picker.scss
@@ -2,6 +2,10 @@
 @import '../../mixins';
 
 .colorPicker {
+  .section {
+    margin-top: 14px;
+  }
+
   .colorInput {
     display: inline-block;
 
