--- a/app/styles/components/map.scss
+++ b/app/styles/components/map.scss
@@ -136,14 +136,6 @@
     height: calc(100% - #{$map-footer-height + $timebar-height}); // footer mini height
   }
 
-
-  :global .gmnoprint,
-  :global .gmaps,
-  :global .cartodb-logo,
-  :global .gm-style a {
-    display: none !important; // sass-lint:disable-line no-important
-  }
-
   &._noFooter {
     height: calc(100% - #{$timebar-height});
   }
@@ -171,5 +163,53 @@
     display: block;
     height: 100%;
     width: 100%;
+  }
+}
+
+:global .mapboxgl-ctrl-logo {
+  position: absolute;
+  pointer-events: all;
+  right: 38px;
+  bottom: 15px;
+}
+
+// override Mapbox GL JS style to always show compact style
+:global .mapboxgl-ctrl-attrib {
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+  margin: 0 10px 10px 10px !important;
+  position: relative;
+  padding-right: 24px !important;
+  background-color: #fff !important;
+  border-radius: 3px 12px 12px 3px;
+  visibility: hidden;
+  z-index: 999;
+}
+:global .mapboxgl-ctrl-attrib:hover {
+  visibility: visible;
+}
+:global .mapboxgl-ctrl-attrib:after {
+  content: '';
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D%270%200%2020%2020%27%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%3E%0D%0A%09%3Cpath%20fill%3D%27%23333333%27%20fill-rule%3D%27evenodd%27%20d%3D%27M4%2C10a6%2C6%200%201%2C0%2012%2C0a6%2C6%200%201%2C0%20-12%2C0%20M9%2C7a1%2C1%200%201%2C0%202%2C0a1%2C1%200%201%2C0%20-2%2C0%20M9%2C10a1%2C1%200%201%2C1%202%2C0l0%2C3a1%2C1%200%201%2C1%20-2%2C0%27%20%2F%3E%0D%0A%3C%2Fsvg%3E");
+  background-color: rgba(255, 255, 255, .5);
+  width: 24px;
+  height: 24px;
+  box-sizing: border-box;
+  visibility: visible;
+  border-radius: 12px;
+}
+
+@media #{$mq-tablet} {
+  :global .mapboxgl-ctrl-logo {
+    right: 20px;
+    bottom: 15px;
+  }
+
+  :global .mapboxgl-ctrl-attrib, :global .mapboxgl-ctrl-attrib:after {
+    display: none; // use attribution of the footer
   }
 }
