--- a/app/styles/components/map/popup.scss
+++ b/app/styles/components/map/popup.scss
@@ -1,6 +1,6 @@
 @import '../../settings';
 
-.customInfowindow {
+.popup {
   background: $color-13;
   bottom: 0;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .5);
@@ -8,14 +8,13 @@
   opacity: .95;
   padding: 16px;
   width: 260px;
-}
-
-.title,
-.description,
-.toggle {
   color: $color-4;
   font-family: $font-family-1;
   font-size: $font-size-xs-small;
+
+  &._compact {
+    padding: 6px;
+  }
 }
 
 .title,
@@ -70,7 +69,22 @@
   padding: 0 !important;
 }
 
-:global .mapboxgl-popup-tip {
+:global .mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip,
+:global .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip,
+:global .mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip {
   border-top-color: $color-13 !important;
 }
 
+:global .mapboxgl-popup-anchor-top .mapboxgl-popup-tip,
+:global .mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip,
+:global .mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip {
+  border-bottom-color: $color-13 !important;
+}
+
+:global .mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
+  border-right-color: $color-13 !important;
+}
+
+:global .mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
+  border-left-color: $color-13 !important;
+}
