--- a/app/styles/components/shared/expand-item-button.scss
+++ b/app/styles/components/shared/expand-item-button.scss
@@ -2,39 +2,52 @@
 @import '../../mixins';
 
 .expandItemButton {
-
+  cursor: pointer;
   button {
+    border: 1px solid transparent;
+    border-radius: 50%;
     outline: none;
     padding: 5px 6px;
     margin-left: 0px;
+    display: inline-block;
 
     svg {
+      cursor: pointer;
+      width: 14px;
+      height: 14px;
+    }
+
+    svg, svg polygon, svg rect, svg path {
       fill: $color-31 !important;
     }
   }
 
-  &.active {
+  .label {
+    color: $color-4;
+    font-size: $font-size-xxs-small;
+    margin-left: 4px;
+    text-transform: capitalize;
+  }
+
+  &._active {
     margin-top: -2px;
     padding-top: 2px;
 
     button {
       border: 1px solid $color-31;
-      border-radius: 50%;
-      margin-left: -1px;
-      margin-right: -1px;
 
-      svg {
+      svg, svg polygon, svg rect, svg path  {
         fill: $color-4 !important;
       }
     }
+  }
 
-    &::after {
-      top: 34px;
-      left: 10px;
-      display: inline-block;
-      position: absolute;
-      content: "";
-      @include triangle($color-mid-blue, 'up');
-    }
+  &._expandable._active::after {
+    top: 34px;
+    left: 10px;
+    display: inline-block;
+    position: absolute;
+    content: "";
+    @include triangle($color-mid-blue, 'up');
   }
 }
