--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -54,3 +54,13 @@
   vertical-align: middle;
   background-color: $color;
 }
+
+@mixin panelRow() {
+  margin: 10px 0 0;
+  padding-right: 26px;
+  padding-left: $menu-mobile-left-padding;
+  @media #{$mq-tablet} {
+    padding-left: $menu-left-padding;
+    padding-right: $menu-right-padding;
+  }
+}
