refactored ExpandItemButton into IconButton

--- a/app/src/components/Shared/Icon.scss
+++ b/app/src/components/Shared/Icon.scss
@@ -1,11 +1,19 @@
 @import '../../../styles/settings';
 
 .icon {
-  width: 100%;
-  height: 100%;
+  width: 14px;
+  height: 14px;
   fill: $color-31;
+
+  polygon, rect, path {
+    fill: $color-31 !important;
+  }
 
   &._activated {
     fill: $color-4;
+
+    polygon, rect, path {
+      fill: $color-4 !important;
+    }
   }
 }
