fleet edit modal

--- a/app/styles/components/shared/checkbox.scss
+++ b/app/styles/components/shared/checkbox.scss
@@ -5,6 +5,12 @@
     margin-bottom: 8px;
   }
 
+  [type="checkbox"]:disabled,
+  [type="checkbox"]:disabled + label{
+    opacity: .4;
+    cursor: not-allowed;
+  }
+
   [type="checkbox"]:not(:checked),
   [type="checkbox"]:checked {
     position: absolute;
