add filter group placeholder message

--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -52,6 +52,8 @@
           cursor: pointer;
         }
 
+        .backButton:focus {outline:0;}
+
         .backIcon {
           @include arrow(8px, 2px, $color-4, 'left');
           vertical-align: text-bottom;
