--- a/app/styles/components/map/flag-filters.scss
+++ b/app/styles/components/map/flag-filters.scss
@@ -74,3 +74,10 @@
     width: 248px;
   }
 }
+
+.noFiltersMessage {
+  color: $color-3;
+  font-size: $font-size-xxs-small;
+  font-style: italic;
+  margin-bottom: 10px;
+}
