harmonize report icon

--- a/app/src/components/Shared/Icon.scss
+++ b/app/src/components/Shared/Icon.scss
@@ -17,3 +17,18 @@
     }
   }
 }
+
+.report {
+  transform: translate(0px, -1px);
+  path {
+    &:last-child {
+      fill: $color-1 !important;
+    }
+  }
+
+  &._activated path {
+    &:last-child {
+      fill: $color-31 !important;
+    }
+  }
+}
