--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -47,7 +47,7 @@
     border-bottom: 1px solid rgba($color-34, 0.2);
     display: none;
     flex-direction: column;
-    padding: 30px 56px 25px 25px;
+    padding: 16px 0 16px 22px;
 
     @media #{$mq-tablet} {
       display: flex;
@@ -66,19 +66,19 @@
       font-weight: $font-weight-bold;
       line-height: 1;
       text-transform: uppercase;
+      margin-top: 4px;
     }
 
     .total {
       color: $color-4;
       font-family: $font-family-1;
-      font-size: $font-size-s-medium;
+      font-size: $font-size-x-small;
       font-weight: $font-weight-bold;
-      margin-top: 8px;
+      margin-top: 4px;
     }
 
     > .categoriesDisplay {
       display: flex;
-      justify-content: space-between;
 
       > .vesselDisplay,
       > .activityDisplay {
