--- a/app/styles/components/map-panels.scss
+++ b/app/styles/components/map-panels.scss
@@ -1,4 +1,5 @@
 @import '../settings';
+@import '../mixins';
 
 .mapPanels {
   z-index: 10;
@@ -10,11 +11,45 @@
     justify-content: space-between;
     pointer-events: none;
     position: absolute;
-    right: 0;
+    right: - $map-panels-width;
     width: $map-panels-width + $control-panel-left-offset;
+    transition: right 0.2s;
 
     &._noFooter {
       height: calc(100vh - #{$timebar-height});
     }
+
+    &._expanded {
+      right: 0;
+
+      .expandButton::after {
+        margin-left: 8px;
+        transform: rotate(225deg);
+      }
+    }
+  }
+}
+
+.expandButton {
+  display: none;
+  position: absolute;
+  left: - (30px - $control-panel-left-offset);
+  top: 0;
+  height: 73px;
+  width: 30px;
+  background: $color-19;
+  color: $color-white;
+  pointer-events: all;
+  cursor: pointer;
+  z-index: 99;
+
+  @media #{$mq-tablet} {
+    display: block;
+  }
+  
+  &::after {
+    margin-top: 30px;
+    margin-left: 12px;
+    @include arrow(10px, 2px, $color-white, 'left');
   }
 }
