--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -17,10 +17,11 @@
       padding-top: 15px;
       padding-bottom: 20px;
       border-bottom: 1px solid $color-fade-blue;
-
+      
       @media #{$mq-tablet} {
         padding-left: 12px;
-        padding-top: 24px;
+        padding-top: 18px;
+        padding-bottom: 25px;
         flex-direction: row;
       }
 
