--- a/app/src/miniglobe/components/miniGlobe.scss
+++ b/app/src/miniglobe/components/miniGlobe.scss
@@ -18,14 +18,6 @@
     display: flex;
     justify-content: center;
 
-    .zoneMarker {
-      border: 2px solid red;
-      position: absolute;
-      z-index: 10;
-      flex: 1;
-      align-self: center;
-    }
-
     .globeSvg {
       position: absolute;
       fill: $color-base;
@@ -34,4 +26,10 @@
       border-radius: 50%;
     }
   }
+}
+
+.viewport {
+  stroke-width: 6px;
+  fill: none;
+  stroke: red;
 }
