--- a/app/styles/components/map-panels.scss
+++ b/app/styles/components/map-panels.scss
@@ -11,7 +11,7 @@
     justify-content: space-between;
     pointer-events: none;
     position: absolute;
-    right: - $map-panels-width;
+    right: - $map-panels-width - 10px;
     width: $map-panels-width + $control-panel-left-offset;
     transition: right 0.2s;
 
@@ -21,6 +21,10 @@
 
     &._expanded {
       right: 0;
+
+      .expandButton {
+        left: - (30px - $control-panel-left-offset);
+      }
 
       .expandButton::after {
         margin-left: 8px;
@@ -33,7 +37,8 @@
 .expandButton {
   display: none;
   position: absolute;
-  left: - (30px - $control-panel-left-offset);
+  left: - (30px - $control-panel-left-offset) - 10px;
+  transition: left 0.2s;
   top: 0;
   height: 73px;
   width: 30px;
