fixed watermark on retina screens

--- a/app/styles/components/map.scss
+++ b/app/styles/components/map.scss
@@ -178,5 +178,6 @@
   width: 66px;
   height: 26px;
   cursor: pointer;
-  background-image: url('https://maps.gstatic.com/mapfiles/api-3/images/google4.png');
+  background-image: url('https://maps.gstatic.com/mapfiles/api-3/images/google4_hdpi.png');
+  background-size: cover;
 }
