--- a/app/styles/components/shared/accordion.scss
+++ b/app/styles/components/shared/accordion.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
-    padding-right: 26px;
+    padding-right: $menu-mobile-right-padding;
     padding-left: $menu-mobile-left-padding;
 
     @media #{$mq-tablet} {
