minor style changes

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -12,10 +12,12 @@ $max-map-footer-height: 485px;
 $offset-panel-control-mobile: 108px;
 $offset-panel-control: 20px;
 
-$menu-left-padding: 30px;
-$menu-right-padding: 30px;
-$menu-mobile-left-padding: 20px;
-$menu-mobile-right-padding: 20px;
+$menu-height: 73px;
+$menu-mobile-height: 62px;
+$menu-left-padding: 25px;
+$menu-right-padding: 25px;
+$menu-mobile-left-padding: 25px;
+$menu-mobile-right-padding: 25px;
 
 $header-height-mobile: 80px;
 $header-height: 66px;
