--- a/app/styles/components/map/layer-management.scss
+++ b/app/styles/components/map/layer-management.scss
@@ -3,7 +3,7 @@
 .layerManagement {
   display: flex;
   justify-content: space-between;
-  margin: 10px 0 0;
+  margin: 10px 0 20px;
   padding-right: 26px;
   padding-left: $menu-mobile-left-padding;
   @media #{$mq-tablet} {
