--- a/app/src/components/Shared/IconButton.scss
+++ b/app/src/components/Shared/IconButton.scss
@@ -1,13 +1,20 @@
 @import '../../../styles/settings';
 
 .iconButton {
+  display: flex;
+  align-items: center;
+}
+
+.button {
   width: 28px;
   height: 28px;
   border-radius: 50%;
   cursor: pointer;
-  padding: 5px 4px 4px 5px;
   display: inline-block;
-  margin-right: 2px;
+  margin-right: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:focus {
     outline: 0;
@@ -26,7 +33,6 @@
 .label {
   color: $color-4;
   font-size: $font-size-xxs-small;
-  margin-left: 4px;
   text-transform: capitalize;
   cursor: pointer;
 }
