--- a/app/styles/components/shared/accordion.scss
+++ b/app/styles/components/shared/accordion.scss
@@ -8,12 +8,10 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
-    padding-right: $menu-mobile-right-padding;
-    padding-left: $menu-mobile-left-padding;
+    padding: 22px 25px;
 
-    @media #{$mq-tablet} {
-      padding-right: $menu-right-padding;
-      padding-left: $menu-left-padding;
+    &:hover {
+      background: rgba(255, 255, 255, .1);
     }
 
     &:not(:first-child) {
@@ -23,12 +21,12 @@
 
     .title {
       color: $color-4;
-      padding-bottom: 18px;
       font-size: $font-size-small;
     }
 
     .expandArrowButton {
       margin-top: 2px;
+      margin-right: 4px;
       outline: none;
       cursor: pointer;
       pointer-events: none;
