--- a/app/styles/components/shared/expand-item.scss
+++ b/app/styles/components/shared/expand-item.scss
@@ -2,22 +2,22 @@
 
 ._mobileScroll {
 
-  > .expandItem {
-    overflow-y: auto;
-    max-height: 218px;
+  // > .expandItem {
+  //   overflow-y: auto;
+  //   max-height: 218px;
 
-    &.isVesselInfoPanelOpen {
-      max-height: 60px;
-    }
+  //   &.isVesselInfoPanelOpen {
+  //     max-height: 60px;
+  //   }
 
-    @media #{$mq-tablet} {
-      max-height: 340px;
+  //   @media #{$mq-tablet} {
+  //     max-height: 340px;
 
-      &.isVesselInfoPanelOpen {
-        max-height: 340px;
-      }
-    }
-  }
+  //     &.isVesselInfoPanelOpen {
+  //       max-height: 340px;
+  //     }
+  //   }
+  // }
 }
 
 .expandItem {
