--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -51,6 +51,10 @@
 
     @media #{$mq-tablet} {
       display: flex;
+
+      .vesselDisplay {
+        margin-left: 10px;
+      }
     }
 
     .fishingHours {
@@ -86,6 +90,7 @@
         flex-direction: column;
       }
     }
+    
   }
 
   .mapOptions {
