--- a/app/styles/components/map/layer-management-modal.scss
+++ b/app/styles/components/map/layer-management-modal.scss
@@ -1,9 +1,23 @@
 @import '../../settings';
 
 .layerManagementModal {
+  position: relative;
+
   &._disabled {
     opacity: .5;
     pointer-events: none;
+  }
+
+  &Loading {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 104;
   }
 }
 
