--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -89,6 +89,7 @@ $color-35: #153b78;
 $color-36: #0A1E50;
 $color-37: #ffbcc6;
 $color-38: rgba(22,48,103,0.2);
+$color-39: #ffcc6e;
 
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
