--- a/app/src/notifications/components/notifications.scss
+++ b/app/src/notifications/components/notifications.scss
@@ -6,16 +6,16 @@
   font-family: $font-family-1;
   font-size: $font-size-xs-small;
   font-weight: 400;
-  height: 60px;
+  min-height: 60px;
   justify-content: center;
-  padding: 0 10px 0 50px;
-  position: absolute;
-  width: calc(100% - 50px);
+  padding: 10px 10px 10px 50px;
+  width: 100%;
   z-index: 21;
 
   @media #{$mq-tablet} {
     font-size: $font-size-small;
-    width: calc(100% - #{$map-panels-width});
+    padding-right: calc(#{$map-panels-width} + 50px);
+    position: absolute;
   }
 
   a {
