Reimplement reports polygon selection

--- a/app/styles/components/map/popup.scss
+++ b/app/styles/components/map/popup.scss
@@ -22,14 +22,13 @@
 }
 
 .title,
-.description {
-  pointer-events: none;
-}
-
-.title,
 .toggle {
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.toggle:focus {
+  outline: none;
 }
 
 .toggle {
