do not allow validating GeoJSON layer before data gets uploaded

--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -25,6 +25,11 @@
     color: $color-4;
   }
 
+  &._filled:disabled {
+    opacity: .5;
+    cursor: not-allowed;
+  }
+
   &._transparent {
     background-color: transparent;
   }
