--- a/src/app/map/components/mapDashboard.module.scss
+++ b/src/app/map/components/mapDashboard.module.scss
@@ -1,10 +1,10 @@
 @import '../../../styles/settings';
 
-
 .mapContainer {
   height: calc(100% - #{$map-footer-height + $timebar-height});
   position: relative;
   z-index: 4;
+  background-color: $color-1;
 
   @media screen and (min-width: 900px) {
     height: calc(100% - #{$map-footer-height + $timebar-height}); // footer mini height
