--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -37,7 +37,8 @@ body {
   overflow-x: hidden;
 }
 
-:global .fullHeightContainer { // FIXME: add .full-height-container to each page root div
+:global .fullHeightContainer {
+  // FIXME: add .full-height-container to each page root div
   height: 100%;
 }
 
