--- a/src/styles/search/result-list.module.scss
+++ b/src/styles/search/result-list.module.scss
@@ -28,7 +28,7 @@
 }
 
 .quickSearchResult {
-  color: rgba($color-4, .7);
+  color: rgba($color-4, 0.7);
   padding: 14px 11px;
 }
 
@@ -59,6 +59,7 @@
 
   .mainResultLabel {
     font-weight: $font-weight-bold;
+    text-transform: uppercase;
   }
 
   .subResultLabel {
