show layer in vessel info

--- a/src/styles/components/info-panel.module.scss
+++ b/src/styles/components/info-panel.module.scss
@@ -193,6 +193,11 @@
     }
   }
 
+  .layer {
+    padding: 0 20px 20px;
+    font-size: $font-size-xxs-small;
+  }
+
   .actionIcons {
     right: 86px;
     display: flex;
