--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -25,7 +25,7 @@
 body,
 html {
   font-family: $font-family-1;
-  font-size: $font-size-normal;
+  font-size: 10px;
   font-weight: $font-weight-normal;
   height: 100%;
   margin: 0;
