--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700');
 @import 'settings';
 
+:root {
+  --color-danger-red: rgb(360, 62, 98);
+  --color-map-background: #002458;
+  --color-highlight-blue: #6aecf9;
+}
+
 * {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
